force-app/main/default/objects/Approval_Section__c/Approval_Section__c.object-meta.xml
<CustomObject>
    <label>Approval Section</label>
    <nameField>
        <label>Approval Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>