force-app/main/default/objects/Approval_Section__c/fields/Approval_Page__c.field-meta.xml
<CustomField>
    <fullName>Approval_Page__c</fullName>
    <label>Approval Page</label>
    <referenceTo>Approval_Page__c</referenceTo>
    <relationshipLabel>Approval Sections</relationshipLabel>
    <relationshipName>Approval_Sections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>