force-app/main/default/objects/Approval_Section__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <inlineHelpText>API name of the object being modified in this section. ex. &apos;Opportunity_Approval__c&apos; for normal sections and &apos;Financials__c&apos; for related list sections.</inlineHelpText>
    <label>Object API Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>