force-app/main/default/objects/Approval_Section__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <inlineHelpText>Controls the order sections show up in within a page.</inlineHelpText>
    <label>Order</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>