force-app/main/default/objects/Approval_Section__c/fields/Parent_Relationship_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Relationship_Field__c</fullName>
    <label>Parent Relationship Field</label>
    <length>40</length>
    <type>Text</type>
</CustomField>