force-app/main/default/objects/Approval_Section__c/fields/Relationship_Field__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Field__c</fullName>
    <inlineHelpText>master-detail or lookup field on the object for this section that should be pre-filled and not visible to the user.</inlineHelpText>
    <label>Relationship Field</label>
    <length>40</length>
    <type>Text</type>
</CustomField>