force-app/main/default/objects/Approval_Section__c/recordTypes/Related_List.recordType-meta.xml
<RecordType>
    <fullName>Related_List</fullName>
    <active>true</active>
    <label>Related List</label>
</RecordType>