force-app/main/default/objects/Approval_Section__c/recordTypes/Standard_Fields.recordType-meta.xml
<RecordType>
    <fullName>Standard_Fields</fullName>
    <active>true</active>
    <label>Standard Fields</label>
</RecordType>